Tribute page passing 10/10 tests

--- a/tributepage/index.html
+++ b/tributepage/index.html
@@ -9,25 +9,26 @@
 </head>
 <body>
     <main id="main">
-        <h1 id="title">Lorem Ipsum</h1>
+        <h1 id="title">Lorem Ipsum, The Unknown Writer</h1>
         <div id="img-div">
-            <figure>
-                <img src="https://via.placeholder.com/150/000000/FFFFFF/?text=Lorem" alt="Lorem" id="image">
-                <figcaption id="img-caption">
-                    Lorem Ipsum Image
-                </figcaption>
-              </figure>
+            <img src="https://via.placeholder.com/300/000000/FFFFFF/?text=Lorem" alt="Lorem" id="image">
+
+            <figcaption id="img-caption">
+                Lorem Ipsum Image
+            </figcaption>
         </div>
 
         <article id="tribute-info">
-            <h2>Lorem Ipsum</h2>
-            <p id="tribute-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti eum porro dignissimos 
+            <h2>Famous Lorem Ipsum Quotes</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti eum porro dignissimos 
            
             <a href="https://en.wikipedia.org/wiki/Lorem_ipsum"
             id="tribute-link" 
             target="_blank">lorem</a>
-            
+
             necessitatibus atque dolores, quaerat, itaque doloribus sapiente quod cum vel aliquid optio explicabo adipisci animi quos excepturi officiis!</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, sed provident! Repellat nihil accusamus quis, minus excepturi asperiores ipsa eos minima. Quod velit molestiae vero optio enim temporibus saepe totam.</p>
         </article>
 
       </main>
